language/move-lang/tests/move_check/translated_ir_tests/borrow_tests/borrow_global_acquires_invalid_annotation.move
module A {
    resource struct T1 {v: u64}

    public fun test() acquires T1 {
        test()
    }

}

// check: INVALID_ACQUIRES_RESOURCE_ANNOTATION_ERROR
